# framework-from-favicon

./: LICENSE  README.md  noxfile.py  setup.cfg
.github/workflows/: generate-package.yml  run-tests.yml
framework_favicon/: __init__.py  database.json  database.py  framework_hash.py  grab_result.py  grabbers.py  main.py  utils.py  values.py
tests/: test_base.py  test_cli.py  test_grabbers.py  test_utils.py  values.py
