[metadata]
name = framework_favicon
author = sensokame
author_email = justhoucem@gmail.com
version = 0.1
url = https://github.com/sensokame/framework-from-favicon
description = 
    framework guessing from favicon
long_description = file: README.md
keywords = automation, testing, systems, devices
license = MIT
classifiers =
    License :: OSI Approved :: MIT No Attribution License (MIT-0)
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.6
install_requires =
    beautifulsoup4
    rich
    argparse 
    validators
    unittest-xml-reporting

[options.entry_points]
console_scripts =
    framework_favicon = framework_favicon.main:main_cli

[options.extras_require]
dev = 
    pdoc3
    flake8 
    twine 
    setuptools
    autopep8

[flake8]
exclude = 
    .git,
    __pycache__,
    build,
    dist,
    .tox,
    .nox,
    .pytest_cache
max_complexity = 16
max_line_length = 100
ignore =
    E731
    E116
    E114
    E221
    E241